@@ -17,21 +17,25 @@ import java.io.Serial;
 import java.io.Serializable;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.ServiceLoader;
-import java.util.stream.Collectors;
 
 import org.eclipse.jetty.util.StringUtil;
 import org.eclipse.jetty.util.thread.AutoLock;
 
 /**
- * Credentials. The Credential class represents an abstract mechanism for checking authentication credentials. A credential instance either represents a secret,
- * or some data that could only be derived from knowing the secret.
- * <p>
- * Often a Credential is related to a Password via a one way algorithm, so while a Password itself is a Credential, a UnixCrypt or MD5 digest of a a password is
- * only a credential that can be checked against the password.
- * <p>
- * This class includes an implementation for unix Crypt an MD5 digest.
+ * <p>An abstraction for checking authentication credentials.</p>
+ * <p>A credential instance either represents a secret,
+ * or some data that could only be derived from knowing the
+ * secret, such as a checksum.</p>
+ * <p>This class includes implementations for:</p>
+ * <ul>
+ *   <li>the Unix Crypt algorithm</li>
+ *   <li>the MD5 message digest algorithm</li>
+ *   <li>any generic message digest algorithm supported by the current JVM</li>
+ * </ul>
  *
  * @see Password
  */
@@ -44,31 +48,37 @@ public abstract class Credential implements Serializable
     // as that introduces a Logger requirement that command line Password cannot use.
     private static final List<CredentialProvider> CREDENTIAL_PROVIDERS = ServiceLoader.load(CredentialProvider.class).stream()
         .map(ServiceLoader.Provider::get)
-        .collect(Collectors.toList());
+        .toList();
 
     /**
-     * Check a credential
+     * <p>Checks the given credential against this credential instance.</p>
      *
-     * @param credentials The credential to check against. This may either be another Credential object, a Password object or a String which is interpreted by this
-     * credential.
-     * @return True if the credentials indicated that the shared secret is known to both this Credential and the passed credential.
+     * @param credentials the credential to check against this instance.
+     * This may either be another Credential object; or a Password object;
+     * or a String, char[] or byte[] that are interpreted by this credential.
+     * @return whether the given credentials match this credential instance
      */
     public abstract boolean check(Object credentials);
 
     /**
-     * Get a credential from a String. If the credential String starts with a known Credential type (eg "CRYPT:" or "MD5:" ) then a Credential of that type is
-     * returned. Otherwise, it tries to find a credential provider whose prefix matches with the start of the credential String. Else the credential is assumed
-     * to be a Password.
+     * <p>Converts the given String into a Credential.</p>
+     * <p>If the String starts with a known Credential type (such as {@code CRYPT:}
+     * or {@code MD5:}) then a Credential of that type is returned.
+     * Otherwise, it tries to find a credential provider whose prefix matches
+     * the start of the String.
+     * Otherwise, the credential is assumed to be a {@link Password}.</p>
      *
      * @param credential String representation of the credential
      * @return A Credential or Password instance.
      */
     public static Credential getCredential(String credential)
     {
-        if (credential.startsWith(Crypt.__TYPE))
+        if (credential.startsWith(Crypt.TYPE))
             return new Crypt(credential);
-        if (credential.startsWith(MD5.__TYPE))
+        if (credential.startsWith(MD5.TYPE))
             return new MD5(credential);
+        if (credential.startsWith(MD.TYPE))
+            return new MD(credential);
 
         for (CredentialProvider cp : CREDENTIAL_PROVIDERS)
         {
@@ -76,9 +86,7 @@ public abstract class Credential implements Serializable
             {
                 final Credential credentialObj = cp.getCredential(credential);
                 if (credentialObj != null)
-                {
                     return credentialObj;
-                }
             }
         }
 
@@ -96,7 +104,7 @@ public abstract class Credential implements Serializable
     protected static boolean stringEquals(String known, String unknown)
     {
         @SuppressWarnings("ReferenceEquality")
-        boolean sameObject = (known == unknown);
+        boolean sameObject = known == unknown;
         if (sameObject)
             return true;
         if (known == null || unknown == null)
@@ -136,19 +144,19 @@ public abstract class Credential implements Serializable
     }
 
     /**
-     * Unix Crypt Credentials
+     * <p>Unix Crypt Credential.</p>
      */
     public static class Crypt extends Credential
     {
         @Serial
         private static final long serialVersionUID = -2027792997664744210L;
-        private static final String __TYPE = "CRYPT:";
+        private static final String TYPE = "CRYPT:";
 
         private final String _cooked;
 
-        Crypt(String cooked)
+        private Crypt(String cooked)
         {
-            _cooked = cooked.startsWith(Crypt.__TYPE) ? cooked.substring(__TYPE.length()) : cooked;
+            _cooked = cooked.startsWith(Crypt.TYPE) ? cooked.substring(TYPE.length()) : cooked;
         }
 
         @Override
@@ -161,36 +169,42 @@ public abstract class Credential implements Serializable
         }
 
         @Override
+        public int hashCode()
+        {
+            return _cooked.hashCode();
+        }
+
+        @Override
         public boolean equals(Object credential)
         {
-            if (!(credential instanceof Crypt))
-                return false;
-            Crypt c = (Crypt)credential;
-            return stringEquals(_cooked, c._cooked);
+            if (credential instanceof Crypt c)
+                return stringEquals(_cooked, c._cooked);
+            return false;
         }
 
         public static String crypt(String user, String pw)
         {
-            return __TYPE + UnixCrypt.crypt(pw, user);
+            return TYPE + UnixCrypt.crypt(pw, user);
         }
     }
 
     /**
-     * MD5 Credentials
+     * <p>MD5 Credential.</p>
+     * <p>For generic message digest credentials, see {@link MD}.</p>
      */
     public static class MD5 extends Credential
     {
         @Serial
         private static final long serialVersionUID = 5533846540822684240L;
-        private static final String __TYPE = "MD5:";
+        private static final String TYPE = "MD5:";
         private static final AutoLock __md5Lock = new AutoLock();
         private static MessageDigest __md;
 
         private final byte[] _digest;
 
-        MD5(String digest)
+        private MD5(String digest)
         {
-            digest = digest.startsWith(__TYPE) ? digest.substring(__TYPE.length()) : digest;
+            digest = digest.startsWith(TYPE) ? digest.substring(TYPE.length()) : digest;
             _digest = StringUtil.fromHexString(digest);
         }
 
@@ -204,41 +218,31 @@ public abstract class Credential implements Serializable
         {
             try
             {
-                if (credentials instanceof char[])
-                    credentials = new String((char[])credentials);
-                if (credentials instanceof Password || credentials instanceof String)
-                {
-                    byte[] digest;
-                    try (AutoLock l = __md5Lock.lock())
-                    {
-                        if (__md == null)
-                            __md = MessageDigest.getInstance("MD5");
-                        __md.reset();
-                        __md.update(credentials.toString().getBytes(StandardCharsets.ISO_8859_1));
-                        digest = __md.digest();
-                    }
-                    return byteEquals(_digest, digest);
-                }
-                else if (credentials instanceof MD5)
-                {
+                // Normalize to String, if possible.
+                if (credentials instanceof char[] chars)
+                    credentials = new String(chars);
+                else if (credentials instanceof Password password)
+                    credentials = password.toString();
+
+                if (credentials instanceof String password)
+                    return byteEquals(_digest, md5(password));
+                if (credentials instanceof MD5)
                     return equals(credentials);
-                }
-                else if (credentials instanceof Credential)
-                {
-                    // Allow credential to attempt check - i.e. this'll work
-                    // for DigestAuthModule$Digest credentials
-                    return ((Credential)credentials).check(this);
-                }
-                else
-                {
-                    // Not a MD5 or Credential class
-                    return false;
-                }
+                if (credentials instanceof Credential other)
+                    // Allow the other Credential to check.
+                    return other.check(this);
+                return false;
             }
-            catch (Exception e)
+            catch (Throwable x)
             {
                 return false;
             }
+        }
+
+        @Override
+        public int hashCode()
+        {
+            return Arrays.hashCode(_digest);
         }
 
         @Override
@@ -256,36 +260,112 @@ public abstract class Credential implements Serializable
         {
             try
             {
-                byte[] digest;
-                try (AutoLock l = __md5Lock.lock())
-                {
-                    if (__md == null)
-                    {
-                        try
-                        {
-                            __md = MessageDigest.getInstance("MD5");
-                        }
-                        catch (Exception e)
-                        {
-                            System.err.println("Unable to access MD5 message digest");
-                            e.printStackTrace();
-                            return null;
-                        }
-                    }
-
-                    __md.reset();
-                    __md.update(password.getBytes(StandardCharsets.ISO_8859_1));
-                    digest = __md.digest();
-                }
-
-                return __TYPE + StringUtil.toHexString(digest);
+                byte[] digest = md5(password);
+                return TYPE + StringUtil.toHexString(digest);
             }
-            catch (Exception e)
+            catch (Throwable x)
             {
-                System.err.println("Message Digest Failure");
-                e.printStackTrace();
-                return null;
+                return "<MD5 algorithm failure: %s>".formatted(x);
             }
+        }
+
+        private static byte[] md5(String password) throws NoSuchAlgorithmException
+        {
+            try (AutoLock ignored = __md5Lock.lock())
+            {
+                if (__md == null)
+                    __md = MessageDigest.getInstance("MD5");
+                __md.reset();
+                return __md.digest(password.getBytes(StandardCharsets.ISO_8859_1));
+            }
+        }
+    }
+
+    /**
+     * <p>Generic message digest credential.</p>
+     * <p>The string format is {@code MD:<algorithm>:<hex>}, for example:
+     * {@code MD:SHA-1:5bAa61E4C9B93f3f0682250b6cF8331b7eE68fD8}.</p>
+     */
+    public static class MD extends Credential
+    {
+        @Serial
+        private static final long serialVersionUID = -4794312910062793449L;
+        private static final String TYPE = "MD:";
+
+        private final String _algorithm;
+        private final byte[] _digest;
+
+        private MD(String credential)
+        {
+            if (!credential.startsWith(TYPE))
+                throw new IllegalArgumentException("Invalid credential " + credential);
+            String algoAndDigest = credential.substring(TYPE.length());
+            int colon = algoAndDigest.indexOf(':');
+            if (colon < 0)
+                throw new IllegalArgumentException("Invalid credential " + credential);
+            _algorithm = algoAndDigest.substring(0, colon);
+            _digest = StringUtil.fromHexString(algoAndDigest.substring(colon + 1));
+        }
+
+        @Override
+        public boolean check(Object credentials)
+        {
+            try
+            {
+                // Normalize to String, if possible.
+                if (credentials instanceof char[] chars)
+                    credentials = new String(chars);
+                else if (credentials instanceof byte[] bytes)
+                    credentials = new String(bytes, StandardCharsets.UTF_8);
+                else if (credentials instanceof Password password)
+                    credentials = password.toString();
+
+                if (credentials instanceof String password)
+                    return byteEquals(_digest, digest(_algorithm, password));
+                if (credentials instanceof MD)
+                    return equals(credentials);
+                if (credentials instanceof Credential other)
+                    // Allow the other Credential to check.
+                    return other.check(this);
+                return false;
+            }
+            catch (Throwable x)
+            {
+                return false;
+            }
+        }
+
+        @Override
+        public int hashCode()
+        {
+            return Arrays.hashCode(_digest);
+        }
+
+        @Override
+        public boolean equals(Object obj)
+        {
+            if (obj instanceof MD other)
+                return byteEquals(_digest, other._digest);
+            return false;
+        }
+
+        static String format(String algorithm, String password)
+        {
+            try
+            {
+                byte[] bytes = digest(algorithm, password);
+                return TYPE + algorithm + ":" + StringUtil.toHexString(bytes);
+            }
+            catch (Throwable x)
+            {
+                return "<%s algorithm failure: %s>".formatted(algorithm, x);
+            }
+        }
+
+        private static byte[] digest(String algorithm, String password) throws NoSuchAlgorithmException
+        {
+            MessageDigest digest = MessageDigest.getInstance(algorithm);
+            return digest.digest(password.getBytes(StandardCharsets.UTF_8));
         }
     }
 }
